objects/JBCXM__Permission__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>JBCXM__Dashboard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dashboard</label>
        <referenceTo>JBCXM__Dashboard__c</referenceTo>
        <relationshipLabel>Permissions</relationshipLabel>
        <relationshipName>Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Permissionset__c</fullName>
        <label>Permissionset</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Permissions</relationshipLabel>
        <relationshipName>Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UIView__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UI Views</label>
        <referenceTo>JBCXM__UIViews__c</referenceTo>
        <relationshipLabel>Permissions</relationshipLabel>
        <relationshipName>Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Permission</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>